--- a/config/sync/core.entity_form_display.node.landing_page.default.yml
+++ b/config/sync/core.entity_form_display.node.landing_page.default.yml
@@ -14,6 +14,7 @@ dependencies:
     - inline_entity_form
     - metatag
     - paragraphs
+    - path
     - text
 _core:
   default_config_hash: klOg3BbD8-CQOD9JM7a2gjmw2kpPJRBF02Yw5AwJTIY
@@ -72,6 +73,12 @@ content:
     third_party_settings: {  }
     type: paragraphs
     region: content
+  path:
+    type: path
+    weight: 6
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
@@ -89,7 +96,6 @@ content:
     third_party_settings: {  }
 hidden:
   created: true
-  path: true
   promote: true
   sticky: true
   uid: true
