--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,7 @@
     "drupal/config_update": "^1.5",
     "drupal/console": "~1",
     "drupal/contact_storage": "^1.0@beta",
-    "drupal/core": "~8",
+    "drupal/core": "^8.6.1",
     "drupal/crop": "^2.0",
     "drupal/ctools": "^3.0@alpha",
     "drupal/default_content": "^1.0.0@alpha",
@@ -183,9 +183,6 @@
     "patches": {
       "drupal/addanother":{
         "URL doesnt match machine name": "https://www.drupal.org/files/issues/addanother-url-doesnt-match-machine-name-2851584-3.patch"
-      },
-      "drupal/core":{
-        "Layout Builder optout": "https://www.drupal.org/files/issues/2018-07-28/2936358-opt_in-2936358-64-do-not-test.patch"
       },
       "drupal/video_embed_field":{
         "Provide title attribute in iframe tag for accessibility": "https://www.drupal.org/files/issues/2018-05-14/video_embed_field-title_attribute-2913598-21-8.x-2.x.patch"
