--- a/config/sync/metatag.metatag_defaults.node.yml
+++ b/config/sync/metatag.metatag_defaults.node.yml
@@ -12,11 +12,12 @@ tags:
   content_language: en
   canonical_url: '[current-page:url:absolute]'
   description: '[node:summary]'
+  image_src: '[node:field_banner:entity:field_media_image:entity:url]'
   generator: 'Drupal 8 (http://drupal.org)'
   article_modified_time: '[node:changed:custom:c]'
   article_published_time: '[node:created:custom:c]'
   og_type: 'Article (inc blog)'
-  og_image: '[node:field_banner:entity:field_media_image]'
+  og_image: '[node:field_banner:entity:field_media_image:entity:url]'
   og_updated_time: '[node:changed:custom:c]'
   og_url: '[current-page:url:absolute]'
   og_description: '[node:summary]'
@@ -24,9 +25,9 @@ tags:
   og_site_name: '[site:name]'
   article_section: '[node:content-type]'
   og_title: '[node:title]'
-  twitter_cards_image: '[node:field_banner:entity:field_media_image]'
+  twitter_cards_image: '[node:field_banner:entity:field_media_image:entity:url]'
   twitter_cards_page_url: '[current-page:url:absolute]'
   twitter_cards_description: '[node:summary]'
-  twitter_cards_image_alt: '[node:field_banner:entity:field_media_image]:alt'
+  twitter_cards_image_alt: '[node:field_banner:entity:field_media_image:entity:alt]'
   twitter_cards_type: summary
   twitter_cards_title: '[node:title]'
