--- a/config/sync/metatag.metatag_defaults.node__blog.yml
+++ b/config/sync/metatag.metatag_defaults.node__blog.yml
@@ -13,12 +13,12 @@ tags:
   canonical_url: '[current-page:url:absolute]'
   news_keywords: '[node:field_tags]'
   description: '[node:summary]'
-  image_src: '[node:field_banner:entity:field_media_image]'
+  image_src: '[node:field_banner:entity:field_media_image:entity:url]'
   generator: 'Drupal 8 (http://drupal.org)'
   article_modified_time: '[node:changed:custom:c]'
   article_published_time: '[node:created:custom:c]'
   og_type: blog
-  og_image: '[node:field_banner:entity:field_media_image]'
+  og_image: '[node:field_banner:entity:field_media_image:entity:url]'
   og_updated_time: '[node:changed:custom:c]'
   og_url: '[current-page:url:absolute]'
   og_description: '[node:summary]'
@@ -27,9 +27,9 @@ tags:
   og_site_name: '[site:name]'
   article_section: Blog
   og_title: '[node:title]'
-  twitter_cards_image: '[node:field_banner:entity:field_media_image]'
+  twitter_cards_image: '[node:field_banner:entity:field_media_image:entity:url]'
   twitter_cards_page_url: '[current-page:url:absolute]'
   twitter_cards_description: '[node:summary]'
-  twitter_cards_image_alt: '[node:field_banner:entity:field_media_image]:alt'
+  twitter_cards_image_alt: '[node:field_banner:entity:field_media_image:entity:alt]'
   twitter_cards_type: summary
   twitter_cards_title: '[node:title]'
