--- a/config/sync/metatag.metatag_defaults.node__event.yml
+++ b/config/sync/metatag.metatag_defaults.node__event.yml
@@ -12,12 +12,12 @@ tags:
   news_keywords: '[node:field_category]'
   description: '[node:summary]'
   geo_region: US-MN
-  image_src: '[node:field_banner:entity:field_media_image]'
+  image_src: '[node:field_banner:entity:field_media_image:entity:url]'
   generator: 'Drupal 8 (http://drupal.org)'
   article_modified_time: '[node:changed:custom:c]'
   article_published_time: '[node:created:custom:c]'
   og_type: event
-  og_image: '[node:field_banner:entity:field_media_image]'
+  og_image: '[node:field_banner:entity:field_media_image:entity:url]'
   og_updated_time: '[node:changed:custom:c]'
   og_url: '[current-page:url:absolute]'
   og_description: '[node:summary]'
@@ -26,9 +26,9 @@ tags:
   og_site_name: '[site:name]'
   article_section: Events
   og_title: '[current-page:title]'
-  twitter_cards_image: '[node:field_banner:entity:field_media_image]'
+  twitter_cards_image: '[node:field_banner:entity:field_media_image:entity:url]'
   twitter_cards_page_url: '[current-page:url:absolute]'
   twitter_cards_description: '[node:summary]'
-  twitter_cards_image_alt: '[node:field_banner:entity:field_media_image]:alt'
+  twitter_cards_image_alt: '[node:field_banner:entity:field_media_image:entity:alt]'
   twitter_cards_type: summary
   twitter_cards_title: '[current-page:title]'
