--- a/config/sync/views.view.news.yml
+++ b/config/sync/views.view.news.yml
@@ -140,7 +140,7 @@ display:
           click_sort_column: value
           type: string
           settings:
-            link_to_entity: false
+            link_to_entity: true
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -284,58 +284,6 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
-        path:
-          id: path
-          table: node
-          field: view_node
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: true
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          absolute: false
-          entity_type: node
-          plugin_id: entity_link
-          output_url_as_text: true
         field_banner:
           id: field_banner
           table: node__field_banner
@@ -346,7 +294,7 @@ display:
           label: ''
           exclude: false
           alter:
-            alter_text: true
+            alter_text: false
             text: '<a href="{{ path }} aria-label="Read more about {{ title }}">{{ field_banner }}</a>'
             make_link: false
             path: ''
@@ -410,7 +358,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "<h3><a href=\"{{ path}}\">{{ title }}</a></h3>\n{{ created }}\n{{ body }}\n"
+            text: "<h3>{{ title }}</h3>\r\n{{ created }}\r\n{{ body }}\r\n"
             make_link: false
             path: ''
             absolute: false
