--- a/config/sync/block.block.oc_patterns_footer.yml
+++ b/config/sync/block.block.oc_patterns_footer.yml
@@ -13,7 +13,7 @@ _core:
 id: oc_patterns_footer
 theme: oc_patterns
 region: footer
-weight: -4
+weight: -5
 provider: null
 plugin: 'menu_block:footer'
 settings:
@@ -21,9 +21,13 @@ settings:
   label: Footer
   provider: menu_block
   label_display: '0'
+  follow: 0
+  follow_parent: child
   level: 1
   depth: 1
   expand: 0
   parent: 'footer:'
+  label_type: block
+  label_link: 0
   suggestion: footer
 visibility: {  }
