--- a/config/sync/views.view.block_content.yml
+++ b/config/sync/views.view.block_content.yml
@@ -308,7 +308,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: Operations
+          label: Actions
           exclude: false
           alter:
             alter_text: false
