--- a/config/sync/views.view.content.yml
+++ b/config/sync/views.view.content.yml
@@ -377,7 +377,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: Operations
+          label: Actions
           exclude: false
           alter:
             alter_text: false
