--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,7 @@
     "composer/installers": "^1.6",
     "cweagans/composer-patches": "^1.0",
     "d3/d3": "3.5.*",
+    "doctrine/lexer": "1.0.2",
     "drupal-composer/drupal-scaffold": "^2.0.1",
     "drupal/addanother": "^1.0@RC",
     "drupal/addtoany": "~1",
