--- a/web/themes/citizen_patterns/components/_patterns/04-units/02-content-types/01-landing-page/pl-landing-page.yml
+++ b/web/themes/citizen_patterns/components/_patterns/04-units/02-content-types/01-landing-page/pl-landing-page.yml
@@ -67,3 +67,38 @@ sections:
           1:
             machineName:
               field-paragraphs
+            paragraphSections:
+              1:
+                type:
+                  landing-page-section
+                sectionTitle:
+                  'Section of widgets'
+                sectionIntro: |
+                  <p>Each section can hold multiple widgets. Depending on the content type, section styling options can also be used. This is an example of a landing page section.</p>
+                anchor:
+                  'Section 1'
+                #available layouts: full, two-column, three-column
+                layout:
+                  two-column
+                #available backgrounds: grey (when more background colors are added, the js for the style option will have to be updated).
+                background:
+
+                #For the paragraphs you choose, you must have the paragraph type and all yml information for each field in the paragraph you want to display. You can model the information after teh yml file for each paragraph.  
+                #Available types: accordion-group, gallery, horizontal rule, image, links & files, pullquote, text, video. (all are the machine names of the paragraph entity)
+                paragraphs:
+                  1:
+                    type:
+                      text
+                    widgetTitle:
+                      'Text widget'
+                    text: |
+                      <p>Quis hoc dicit? <strong>Atque etiam valítudinem</strong>, vires, vacuitatem doloris non propter utilitatem solum, sed etiam ipsas propter se expetemus. <em>Cum autem in quo sapienter dicimus</em>, id a primo rectissime dicitur.</p><p>Praeteritis, inquit, gaudeo. An hoc usque quaque, aliter in vita? Tubulo putas dicere? <a href="#">Itaque haec cum illis</a> est dissensio, cum Peripateticis nulla sane. Tu quidem reddes; Istam voluptatem, inquit, Epicurus ignorat? At modo dixeras nihil in istis rebus esse, quod interesset.</p>
+                  2:
+                    type:
+                      image
+                    size:
+                      medium
+                    src:
+                      'http://placeimg.com/1100/600/people'
+                    caption:
+                      'This is a medium size image without a link'
