--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     }
   ],
     "require": {
-    "composer/installers": "^1.7",
+    "composer/installers": "^1.9",
     "cweagans/composer-patches": "^1.0",
     "doctrine/lexer": "1.0.2",
     "drupal/addanother": "^1.0@RC",
@@ -40,10 +40,10 @@
     "drupal/config_update": "^1.5",
     "drupal/console": "^1.9",
     "drupal/console-core": "^1.9",
-    "drupal/core": "^8.9",
-    "drupal/core-composer-scaffold": "^8.9",
-    "drupal/core-project-message": "^8.8",
-    "drupal/core-recommended": "^8.9",
+    "drupal/core": "9.0.0 as 8.9.6",
+    "drupal/core-composer-scaffold": "^9.0.0",
+    "drupal/core-project-message": "^9.0.0",
+    "drupal/core-recommended": "9.0.0",
     "drupal/crop": "^2.0",
     "drupal/ctools": "^3.0@alpha",
     "drupal/default_content": "^2.0",
