--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,9 @@
     }
   ],
     "require": {
-    "composer/installers": "^1.9",
+    "composer/installers": "^1.0",
     "cweagans/composer-patches": "^1.0",
-    "doctrine/lexer": "1.0.2",
+    "doctrine/lexer": "^1.0",
     "drupal/addanother": "^1.0@RC",
     "drupal/addtoany": "~1",
     "drupal/admin_toolbar": "^2.0",
@@ -40,14 +40,15 @@
     "drupal/config_update": "^1.5",
     "drupal/console": "^1.9",
     "drupal/console-core": "^1.9",
-    "drupal/core": "9.0.0 as 8.9.6",
+    "drupal/core": "^9.0.0",
     "drupal/core-composer-scaffold": "^9.0.0",
     "drupal/core-project-message": "^9.0.0",
-    "drupal/core-recommended": "9.0.0",
+    "drupal/core-recommended": "^9.0.0",
     "drupal/crop": "^2.0",
     "drupal/ctools": "^3.0@alpha",
     "drupal/default_content": "^2.0",
     "drupal/devel": "^4.0",
+    "drupal/drupal-extension": "^4.0",
     "drupal/easy_breadcrumb": "^1.6",
     "drupal/entity": "^1.0.0-rc1",
     "drupal/entity_browser": "^2.0.0",
@@ -64,7 +65,6 @@
     "drupal/image_style_quality": "^1.3",
     "drupal/inline_entity_form": "^1.0@beta",
     "drupal/layout_builder_restrictions": "^2.2",
-    "drupal/libraries": "3.x-dev",
     "drupal/linkit": "5.0-beta11",
     "drupal/media_entity_generic": "^1.0@alpha",
     "drupal/menu_block": "^1.4",
@@ -76,11 +76,10 @@
     "drupal/redirect": "^1.3",
     "drupal/responsive_preview": "^1.0@beta",
     "drupal/search_api": "^1.10",
-    "drupal/stage_file_proxy": "^1.0@alpha",
+    "drupal/stage_file_proxy": "^1.0",
     "drupal/superfish": "~1",
     "drupal/token": "^1.5",
     "drupal/twig_tweak": "^2.0",
-    "drupal/upgrade_status": "^2.10",
     "drupal/video_embed_field": "^2.0",
     "drupal/video_embed_media": "^2.0",
     "drupal/views_bulk_operations": "^3.2",
@@ -91,7 +90,9 @@
     "electriccitizen/docksal": "^1.5",
     "geerlingguy/drupal-vm": "^4.7",
     "kint-php/kint-twig": "^2.0",
+    "phpunit/phpunit": "^9.4",
     "rvtraveller/qs-composer-installer": "^1.1",
+    "symfony/css-selector": "^4.0",
     "webflo/drupal-finder": "^1.0"
   },
   "require-dev": {
@@ -102,11 +103,8 @@
     "behat/mink-goutte-driver": "^1.2",
     "jcalderonzumba/gastonjs": "^1.0.2",
     "jcalderonzumba/mink-phantomjs-driver": "^0.3.1",
-    "drupal/drupal-extension": "^3.1",
     "drush-ops/behat-drush-endpoint": "^0.0.4",
-    "pantheon-systems/quicksilver-pushback": "~1",
-    "phpunit/phpunit": "^4.8",
-    "symfony/css-selector": "^2.8"
+    "pantheon-systems/quicksilver-pushback": "~1"
   },
   "conflict": {
       "drupal/drupal": "*"
@@ -186,9 +184,6 @@
       "drupal/menu_block": {
         "Enable using active menus as menu block titles": "https://www.drupal.org/files/issues/menu_block-label_configuration-2809699-51.patch",
         "Enable link functionality on menu block titles": "https://www.drupal.org/files/issues/menu_block-title_as_link-1-d8.patch"
-      },
-      "drupal/libraries": {
-        "New core version requirement": "https://www.drupal.org/files/issues/2019-10-08/libraries-Add_new_key_core_version_requirement_in_libraries.info.yml-3086588-2-D8.patch"
       }
     },
     "enable-patching": true
