--- a/composer.json
+++ b/composer.json
@@ -40,10 +40,10 @@
     "drupal/config_update": "^1.5",
     "drupal/console": "^1.9",
     "drupal/console-core": "^1.9",
-    "drupal/core": "9.0.0 as 8.9.6",
-    "drupal/core-composer-scaffold": "^9.0.0",
-    "drupal/core-project-message": "^9.0.0",
-    "drupal/core-recommended": "9.0.0",
+    "drupal/core": "^8.9",
+    "drupal/core-composer-scaffold": "^8.9",
+    "drupal/core-project-message": "^8.8",
+    "drupal/core-recommended": "^8.9",
     "drupal/crop": "^2.0",
     "drupal/ctools": "^3.0@alpha",
     "drupal/default_content": "^2.0",
@@ -75,6 +75,7 @@
     "drupal/quicklink": "^1.1",
     "drupal/redirect": "^1.3",
     "drupal/responsive_preview": "^1.0@beta",
+    "drupal/role_delegation": "^1.1",
     "drupal/search_api": "^1.10",
     "drupal/stage_file_proxy": "^1.0@alpha",
     "drupal/superfish": "~1",
