--- a/composer.json
+++ b/composer.json
@@ -66,6 +66,7 @@
     "drupal/layout_builder_restrictions": "^2.2",
     "drupal/libraries": "3.x-dev",
     "drupal/linkit": "5.0-beta11",
+    "drupal/media_entity_actions": "^1.0@alpha",
     "drupal/media_entity_generic": "^1.0@alpha",
     "drupal/menu_block": "^1.4",
     "drupal/metatag": "^1.0",
